Bindings/Ogre/hBuild/HGamer3D/Bindings/Ogre/ClassSceneManager.chs


{- function getShadowCasterRenderBackFaces -}
{#fun ogre_scmgr_getShadowCasterRenderBackFaces as getShadowCasterRenderBackFaces 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setShadowUseInfiniteFarPlane -}
{#fun ogre_scmgr_setShadowUseInfiniteFarPlane as setShadowUseInfiniteFarPlane 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function isShadowTechniqueStencilBased -}
{#fun ogre_scmgr_isShadowTechniqueStencilBased as isShadowTechniqueStencilBased 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isShadowTechniqueTextureBased -}
{#fun ogre_scmgr_isShadowTechniqueTextureBased as isShadowTechniqueTextureBased 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isShadowTechniqueModulative -}
{#fun ogre_scmgr_isShadowTechniqueModulative as isShadowTechniqueModulative 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isShadowTechniqueAdditive -}
{#fun ogre_scmgr_isShadowTechniqueAdditive as isShadowTechniqueAdditive 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isShadowTechniqueIntegrated -}
{#fun ogre_scmgr_isShadowTechniqueIntegrated as isShadowTechniqueIntegrated 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isShadowTechniqueInUse -}
{#fun ogre_scmgr_isShadowTechniqueInUse as isShadowTechniqueInUse 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setShadowUseLightClipPlanes -}
{#fun ogre_scmgr_setShadowUseLightClipPlanes as setShadowUseLightClipPlanes 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getShadowUseLightClipPlanes -}
{#fun ogre_scmgr_getShadowUseLightClipPlanes as getShadowUseLightClipPlanes 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setLateMaterialResolving -}
{#fun ogre_scmgr_setLateMaterialResolving as setLateMaterialResolving 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function isLateMaterialResolving -}
{#fun ogre_scmgr_isLateMaterialResolving as isLateMaterialResolving 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function hasStaticGeometry -}
{#fun ogre_scmgr_hasStaticGeometry as hasStaticGeometry 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyStaticGeometry2 -}
{#fun ogre_scmgr_destroyStaticGeometry2 as destroyStaticGeometry2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllStaticGeometry -}
{#fun ogre_scmgr_destroyAllStaticGeometry as destroyAllStaticGeometry 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyInstancedGeometry2 -}
{#fun ogre_scmgr_destroyInstancedGeometry2 as destroyInstancedGeometry2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllInstancedGeometry -}
{#fun ogre_scmgr_destroyAllInstancedGeometry as destroyAllInstancedGeometry 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function hasInstanceManager -}
{#fun ogre_scmgr_hasInstanceManager as hasInstanceManager 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyInstanceManager -}
{#fun ogre_scmgr_destroyInstanceManager as destroyInstanceManager 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllInstanceManagers -}
{#fun ogre_scmgr_destroyAllInstanceManagers as destroyAllInstanceManagers 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyMovableObject -}
{#fun ogre_scmgr_destroyMovableObject as destroyMovableObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' } -> `()'  #}

{- function destroyMovableObject2 -}
{#fun ogre_scmgr_destroyMovableObject2 as destroyMovableObject2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyAllMovableObjectsByType -}
{#fun ogre_scmgr_destroyAllMovableObjectsByType as destroyAllMovableObjectsByType 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllMovableObjects -}
{#fun ogre_scmgr_destroyAllMovableObjects as destroyAllMovableObjects 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function getMovableObject -}
{#fun ogre_scmgr_getMovableObject as getMovableObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasMovableObject -}
{#fun ogre_scmgr_hasMovableObject as hasMovableObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function injectMovableObject -}
{#fun ogre_scmgr_injectMovableObject as injectMovableObject 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function extractMovableObject -}
{#fun ogre_scmgr_extractMovableObject as extractMovableObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' } -> `()'  #}

{- function extractMovableObject2 -}
{#fun ogre_scmgr_extractMovableObject2 as extractMovableObject2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function extractAllMovableObjectsByType -}
{#fun ogre_scmgr_extractAllMovableObjectsByType as extractAllMovableObjectsByType 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setVisibilityMask -}
{#fun ogre_scmgr_setVisibilityMask as setVisibilityMask 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function getVisibilityMask -}
{#fun ogre_scmgr_getVisibilityMask as getVisibilityMask 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function setFindVisibleObjects -}
{#fun ogre_scmgr_setFindVisibleObjects as setFindVisibleObjects 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getFindVisibleObjects -}
{#fun ogre_scmgr_getFindVisibleObjects as getFindVisibleObjects 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setNormaliseNormalsOnScale -}
{#fun ogre_scmgr_setNormaliseNormalsOnScale as setNormaliseNormalsOnScale 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getNormaliseNormalsOnScale -}
{#fun ogre_scmgr_getNormaliseNormalsOnScale as getNormaliseNormalsOnScale 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setFlipCullingOnNegativeScale -}
{#fun ogre_scmgr_setFlipCullingOnNegativeScale as setFlipCullingOnNegativeScale 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getFlipCullingOnNegativeScale -}
{#fun ogre_scmgr_getFlipCullingOnNegativeScale as getFlipCullingOnNegativeScale 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getDestinationRenderSystem -}
{#fun ogre_scmgr_getDestinationRenderSystem as getDestinationRenderSystem 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getCurrentViewport -}
{#fun ogre_scmgr_getCurrentViewport as getCurrentViewport 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function setCameraRelativeRendering -}
{#fun ogre_scmgr_setCameraRelativeRendering as setCameraRelativeRendering 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getCameraRelativeRendering -}
{#fun ogre_scmgr_getCameraRelativeRendering as getCameraRelativeRendering 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

